src/styles.css
body {
    background-color: #e0f2f1; /* Verde água quase branco */
    height: 100vh; 
    margin: 0; 
    position: relative;
    overflow-x: hidden;
}

body::before {
    content: "";
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url('./image/back.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    filter: invert(1) opacity(0.15); /* Inverte para fórmulas ficarem escuras e suaviza */
    z-index: -1;
}

h1 {
    font-size: 5rem;
    margin-bottom: 20px;
    color: #4d6150; 
    text-align: center;
}

h2 {
    font-size: 3rem;
    margin: 10px 0;
    text-align: center;
}

button {
    cursor:pointer;
    position:relative;
    padding:10px 20px;
    background:white;
    font-size:28px;
    border-top-right-radius:10px;
    border-bottom-left-radius:10px;
    transition:all 1s;
    &:after,&:before{
      content:" ";
      width:10px;
      height:10px;
      position:absolute;
      border :0px solid #fff;
      transition:all 1s;
      }
    &:after{
      top:-1px;
      left:-1px;
      border-top:5px solid black;
      border-left:5px solid black;
    }
    &:before{
      bottom:-1px;
      right:-1px;
      border-bottom:5px solid black;
      border-right:5px solid black;
    }
    &:hover{
      border-top-right-radius:0px;
    border-bottom-left-radius:0px;
   
      &:before,&:after{
        
        width:100%;
        height:100%;
      
      }
    
    }
}
.calculation {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: auto;
    padding: 10px;
}

.footer-container {
    display: flex;
    justify-content: flex-end; 
    padding: 10px;
    background-color: #282c34; 
    width: 100%;
    position: fixed; 
    bottom: 0; 
}

@media (max-width: 768px) {
    h1 {
        font-size: 4rem; 
    }
    h2 {
        font-size: 2.5rem; 
    }
    button {
        font-size: 4vw; 
    }
}

@media (max-width: 480px) {
    h1 {
        font-size: 3rem; 
    }
    h2 {
        font-size: 2rem; 
    }
    button {
        font-size: 5vw; 
        padding: 0 5vw; 
    }
}
.big-number {
    font-size: 10em; /* Tamanho grande para os números */
    font-weight: bold; /* Negrito */
  }
  

